--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,11 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.3.1",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.471.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-export-table-to-excel": "^1.0.6",
     "react-router-dom": "^7.1.1",
     "socket.io-client": "^4.8.1"
   },
