--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,6 @@
-
-JWT_SECRET=your_jwt_secret_key
+//server
+JWT_SECRET=my_jwt_secret_key
+DB_URL=mongodb+srv://raj117557:oIOD5FtqeDSxGcik@cluster0.ny5io.mongodb.net/;
+PORT=7001
 
 
