three subdomains configuration

--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,11 @@
 //server
 JWT_SECRET=my_jwt_secret_key
-DB_URL=mongodb+srv://raj117557:oIOD5FtqeDSxGcik@cluster0.ny5io.mongodb.net/;
+//DB_URL=mongodb+srv://raj117557:oIOD5FtqeDSxGcik@cluster0.ny5io.mongodb.net/;
+DB_URL_INDIGA=mongodb+srv://raj117557:oIOD5FtqeDSxGcik@cluster0.mongodb.net/IndigaDB
+DB_URL_KANHA=mongodb+srv://raj117557:oIOD5FtqeDSxGcik@cluster0.mongodb.net/KanhaDB
+DB_URL_AmulyaShri=mongodb+srv://raj117557:oIOD5FtqeDSxGcik@cluster0.mongodb.net/AmulyaShri
+
 PORT=7001
+NODE_ENV = production
 
 
