--- a/server/.env
+++ b/server/.env
@@ -5,7 +5,7 @@ DB_URL_INDIGA=mongodb+srv://raj117557:oIOD5FtqeDSxGcik@cluster0.mongodb.net/Indi
 DB_URL_KANHA=mongodb+srv://raj117557:oIOD5FtqeDSxGcik@cluster0.mongodb.net/KanhaDB
 DB_URL_AmulyaShri=mongodb+srv://raj117557:oIOD5FtqeDSxGcik@cluster0.mongodb.net/AmulyaShri
 
-PORT=7001
+PORT=7001 || 7002 ||7003 ||7007||7008
 NODE_ENV = production
 
 
